updated max image size prevent large images from stretching home & profile pages

--- a/src/client/index.less
+++ b/src/client/index.less
@@ -236,3 +236,11 @@ input {
   min-width: 50%;
   background-color: rgba(255, 255, 255, 0.9);
 }
+
+.details-game-image {
+  max-width: 100%;
+}
+
+.game-image {
+  max-width: 10rem;
+}
